# aiAccountant

./: README.md  main.py  parser.py  pyproject.toml
accountant/: cli.py  counterpart_manager.py  import.py  purchase_manager.py
importers/: mbank.py
