[tool.poetry]
name = "accountant"
version = "0.1.0"
description = ""
authors = ["Łukasz Strzępek <lstrzepek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beancount-mbank = "^0.1.0"
beancount = "^3.0.0"
beangulp = "^0.1.1"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
accountant = "accountant.cli:cli"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
